# workspacer

./: Cargo.toml  README.md
c/: main.c  main.out
c/app/: main.c  run.sh
c/authenticator/: main.c  run.sh
examples/: overall.rs
proj0/: Cargo.toml
proj0/src/: lib.rs
proj1/: Cargo.toml
proj1/src/: lib.rs
safe_app/: Cargo.toml
safe_app/src/: lib.rs
safe_authenticator/: Cargo.toml
safe_authenticator/src/: lib.rs
safe_core/: Cargo.toml
safe_core/src/: lib.rs
src/: lib.rs
